implement info enter and display

--- a/index.html
+++ b/index.html
@@ -12,7 +12,18 @@
 
 <main class="main">
     <div class="container">
-        <textarea name="" id="" cols="30" rows="10"></textarea>
+        <div class="info">
+            <form class="form">
+                <textarea name="" id="" cols="30" rows="10" class="textarea js-textarea" placeholder="Введите ваш текст..."></textarea>
+                <br>
+                <div class="button__wrapper">
+                    <button type="submit" class="button js-button">Сохранить</button>
+                </div>
+            </form>
+
+            <div class="result js-result"></div>
+        </div>
+
     </div>
 </main>
 
